--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -1,8 +1,8 @@
 ---
 username: "<username>"
 
-docker_dir: /home/{{ username }}/docker_apps
-data_dir: /home/{{ username }}/data
+dockge_dir: /mnt/storage/appdata/dockge
+data_dir: /mnt/storage
 
 puid: "<puid>"
 
@@ -12,29 +12,8 @@ ip_address: "<server_ip>"
 
 timezone: "<timezone>"
 
-domain: "<domain_name>"
-
-cloudflare_email: "<cloudflare_email>"
-
-cloudflare_api_key: "<cloudflare_api_key>"
-
-traefik_basic_auth_hash: "<traefik_basic_auth_hash>"
-
-jwt_secret: "<jwt_secret>"
-
-authelia_sqlite_encryption_key: "<authelia_sqlite_encryption_key>"
-
-google_mail: "<google_email>"
-
-google_insecure_app_pass: "<google_insecure_app_pass>"
-
-authelia_admin_mail: "<authelia_admin_mail>"
-
-authelia_admin_argon2id_pass: "<authelia_admin_argon2id_pass>"
-
-wg_password: "<wg_pass>"
-
-codeserver_password: "<code_pass>"
+samba_user: "<samba_user>"
+samba_pass: "<samba_pass>"
 
 packages:
   - unzip
@@ -43,6 +22,7 @@ packages:
   - git
   - python3
   - python3-pip
+  - samba
 
 pip_packages:
   - ansible
