--- a/tasks/add_ownership.yml
+++ b/tasks/add_ownership.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add required permissions to data and docker_apps directories
   ansible.builtin.file:
-    path: "{{ item }}"
+    path: "{{ dockge_dir }}"
     recurse: true
     state: directory
     owner: "{{ username }}"
@@ -9,29 +9,3 @@
     mode: "0755"
   loop:
     - "{{ data_dir }}"
-    - "{{ docker_dir }}/authelia"
-    - "{{ docker_dir }}/code_server"
-    - "{{ docker_dir }}/dashdot"
-    - "{{ docker_dir }}/duplicati"
-    - "{{ docker_dir }}/filebrowser"
-    - "{{ docker_dir }}/guacamole"
-    - "{{ docker_dir }}/heimdall"
-    - "{{ docker_dir }}/homarr"
-    - "{{ docker_dir }}/jellyfin"
-    - "{{ docker_dir }}/jellyseerr"
-    - "{{ docker_dir }}/monitoring"
-    - "{{ docker_dir }}/n8n"
-    - "{{ docker_dir }}/nextcloud"
-    - "{{ docker_dir }}/portainer"
-    - "{{ docker_dir }}/prowlarr"
-    - "{{ docker_dir }}/qbittorrent"
-    - "{{ docker_dir }}/radarr"
-    - "{{ docker_dir }}/requestrr"
-    - "{{ docker_dir }}/sonarr"
-    - "{{ docker_dir }}/syncthing"
-    - "{{ docker_dir }}/traefik"
-    - "{{ docker_dir }}/unmanic"
-    - "{{ docker_dir }}/uptime_kuma"
-    - "{{ docker_dir }}/vaultwarden"
-    - "{{ docker_dir }}/watchtower"
-    - "{{ docker_dir }}/wireguard"
