--- a/tasks/add_ownership.yml
+++ b/tasks/add_ownership.yml
@@ -1,11 +1,12 @@
 ---
 - name: Add required permissions to data and docker_apps directories
   ansible.builtin.file:
-    path: "{{ dockge_dir }}"
+    path: "{{ item }}"
     recurse: true
     state: directory
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0755"
-  loop:
+  loop: 
     - "{{ data_dir }}"
+    - "{{ dockge_dir }}"
