--- a/tasks/essential.yml
+++ b/tasks/essential.yml
@@ -4,27 +4,39 @@
     update_cache: true
     cache_valid_time: 3600
     upgrade: full
-  when: ansible_distribution in ["Ubuntu", "Debian"]
 
 - name: Check if reboot required on Ubuntu
   ansible.builtin.stat:
     path: /var/run/reboot-required
   register: reboot_required_file
-  when: ansible_distribution in ["Ubuntu", "Debian"]
 
 - name: Reboot if required on Ubuntu
   ansible.builtin.reboot:
     msg: Rebooting due to a kernel update
-  when: (ansible_distribution in ["Ubuntu", "Debian"]) and reboot_required_file.stat.exists
+  when: reboot_required_file.stat.exists
 
 - name: Install packages
   ansible.builtin.package:
     name: "{{ packages }}"
     state: present
     
-- name: Move EXTERNALLY-MANAGED
-  ansible.builtin.command: 
-    cmd: mv /usr/lib/python3.11/EXTERNALLY-MANAGED /usr/lib/python3.11/EXTERNALLY-MANAGED.bk
+- name: Check if the EXTERNALLY-MANAGED file exists
+  ansible.builtin.stat:
+    path: /usr/lib/python3.11/EXTERNALLY-MANAGED
+  register: file_stat
+
+- name: Rename the file to EXTERNALLY-MANAGED-BACKUP if it exists
+  ansible.builtin.copy:
+    src: /usr/lib/python3.11/EXTERNALLY-MANAGED
+    dest: /usr/lib/python3.11/EXTERNALLY-MANAGED-BACKUP
+    remote_src: yes
+  when: file_stat.stat.exists
+
+- name: Remove EXTERNALLY-MANAGED if it exists
+  ansible.builtin.file:
+    path: /usr/lib/python3.11/EXTERNALLY-MANAGED
+    state: absent
+  when: file_stat.stat.exists
 
 - name: Install pip packages
   ansible.builtin.pip:
