--- a/tasks/smb.yml
+++ b/tasks/smb.yml
@@ -1,36 +1,31 @@
 ---
-- name: 复制Samba配置文件
-  template:
-    src: samba.conf.j2
-    dest: /etc/samba/smb.conf
 
-- name: 启动Samba服务并设置开机自启
-  systemd:
-    name: smbd
-    state: started
-    enabled: yes
+- name: Add samba users
+  ansible.builtin.user:
+    name: "{{ item }}"
+    groups: users, samba
+    append: true
+  loop:
+    - guest
 
-- name: 创建Samba系统用户
-  user:
-    name: "{{ samba_user }}"
-    createhome: no
-    shell: /bin/false
-    state: present
 
-- name: 设置Samba用户密码
-  command: smbpasswd -s -a {{ samba_user }}
-  args:
-    stdin: "{{ samba_pass }}\n{{ samba_pass }}"
-
-- name: 创建Samba共享目录并设置权限
-  file:
-    path: "{{ data_dir }}"
-    state: directory
-    owner: "{{ samba_user }}"
-    group: "{{ samba_user }}"
-    mode: "0775"
-
-- name: 重启Samba服务以应用配置更改
-  systemd:
-    name: smbd
-    state: restarted
+- name: Setup samba shares
+  ansible.builtin.include_role:
+      name: vladgh.samba.server
+  vars:
+    samba_apple_extensions: yes
+    samba_shares:
+      - name: Homelab
+        comment: Homelab
+        path: "{{ data_dir }}"
+        browsable: yes
+        write_list: +users
+        group: users
+        hide_special_files: yes
+        follow_symlinks: yes
+        hide_dot_files: no
+    samba_users:
+      - name: "{{ samba_user }}"
+        password: "{{ samba_pass }}"
+      - name: guest
+        password: guest
