--- a/tasks/add_ownership.yml
+++ b/tasks/add_ownership.yml
@@ -8,5 +8,5 @@
     group: "{{ username }}"
     mode: "0755"
   loop: 
-    - "{{ data_dir }}"
+    - "{{ storage_dir }}"
     - "{{ dockge_dir }}"
