--- a/tasks/smb.yml
+++ b/tasks/smb.yml
@@ -1,31 +1,28 @@
 ---
+- name: Copy Samba config
+  ansible.builtin.template:
+    src: samba.conf.j2
+    dest: /etc/samba/smb.conf
 
-- name: Add samba users
+- name: Strart Samba sevice and autostart
+  ansible.builtin.systemd:
+    name: smbd
+    state: started
+    enabled: yes
+
+- name: Creat Samba user
   ansible.builtin.user:
-    name: "{{ item }}"
-    groups: users, samba
-    append: true
-  loop:
-    - guest
+    name: "{{ samba_user }}"
+    createhome: no
+    shell: /bin/false
+    state: present
 
+- name: Set Samba password
+  ansible.builtin.command: smbpasswd -s -a {{ samba_user }}
+  args:
+    stdin: "{{ samba_pass }}\n{{ samba_pass }}"
 
-- name: Setup samba shares
-  ansible.builtin.include_role:
-      name: vladgh.samba.server
-  vars:
-    samba_apple_extensions: yes
-    samba_shares:
-      - name: Homelab
-        comment: Homelab
-        path: "{{ data_dir }}"
-        browsable: yes
-        write_list: +users
-        group: users
-        hide_special_files: yes
-        follow_symlinks: yes
-        hide_dot_files: no
-    samba_users:
-      - name: "{{ samba_user }}"
-        password: "{{ samba_pass }}"
-      - name: guest
-        password: guest
+- name: 重启Samba服务以应用配置更改
+  ansible.builtin.systemd:
+    name: smbd
+    state: restarted
