--- a/tasks/add_ownership.yml
+++ b/tasks/add_ownership.yml
@@ -1,12 +1,9 @@
 ---
 - name: Add required permissions to data and docker_apps directories
   ansible.builtin.file:
-    path: "{{ item }}"
+    path: "{{ storage_dir }}"
     recurse: true
     state: directory
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0755"
-  loop: 
-    - "{{ storage_dir }}"
-    - "{{ dockge_dir }}"
