--- a/main.yml
+++ b/main.yml
@@ -24,5 +24,5 @@
     - name: Modify ownership of data and docker_apps directories
       ansible.builtin.include_tasks: tasks/add_ownership.yml
 
-    - name: Install 1panel
-      ansible.builtin.include_tasks: tasks/1panel.yml
+    - name: Install mdserver-web
+      ansible.builtin.include_tasks: tasks/mdserver_web.yml
